[tool.poetry]
name = "pykakao"
version = "1.0.0"
description = "KakaoChatBot JSON helper"
authors = ["Seok Won <ikr@kakao.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pykakao" }]

[tool.poetry.dependencies]
python = "^3.10"
msgspec = "^0.12.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
