[tool.poetry]
name = "kakao_json"
version = "1.0.4"
description = "카카오챗봇 JSON helper"
authors = ["Seok Won <ikr@kakao.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kakao_json" }]

[tool.poetry.dependencies]
python = "^3.10"
msgspec = "^0.18.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
